<resources>
    <string name="app_name">ToDoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_to_do_name">Enter To Do Name</string>
    <string name="select_priority">Select Priority</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="date">Date :</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="time">Time :</string>
    <string name="_00_00">00:00</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="new_user">New user</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>